--- a/views/base.html
+++ b/views/base.html
@@ -229,7 +229,7 @@
               <a class="nav-link text-uppercase Gray_5 " href="/community">COMMUNITY</a>
             </li>  -->
             <li class="ui compact menu nav-item my-auto h-100 ms-4 d-none d-md-block" style="background: none;">
-              <div class="ui simple dropdown item Gray_5 en d-none d-md-block" id="moveArrow" tabindex="0">
+              <div class="ui simple dropdown item Gray_5 en d-none d-md-block lineOnDropdown" id="moveArrow" tabindex="0">
                 COMMUNITY
                 <i class="angle down icon" id="myArrow"></i>
                 <div class="menu bgGray0" tabindex="-1">
@@ -240,7 +240,7 @@
               </div>
             </li>
             <div class="ui compact menu nav-item ms-3 my-auto h-100  d-none d-md-block" style="background: none;">
-              <div class="ui simple dropdown item Gray_5 en text-uppercase " id="moveArrow" tabindex="0">
+              <div class="ui simple dropdown item Gray_5 en text-uppercase lineOnDropdown " id="moveArrow" tabindex="0">
                 career
                 <i class="angle down icon" id="myArrow"></i>
                 <div class="menu bgGray0" tabindex="-1">
@@ -345,7 +345,7 @@
       letter-spacing: -0.02em;">
         씨앤에이아이 <br />
         사업자등록번호 : 231-81-10834｜대표 : 이원섭 <br />
-        서울 성동구 연무장5가길 7 현대테라스타워 507호｜대전광역시 중구 중앙로 101 대전창업허브 4F <br />
+        서울특별시 서초구 서리풀길 29-9｜대전광역시 중구 중앙로 101 대전창업허브 4F <br />
         © 2022. CNAI Inc. all rights reserved.
       </div>
     </div>
