--- a/views/company.html
+++ b/views/company.html
@@ -377,10 +377,11 @@ line-height: 150%;
         <p class="SubTitle_1 Gray_2">Contact</p>
         <p class="Title_1 col-md-7" style="margin-bottom: 5.5rem;">CN.AI에게 궁금한 점이 있다면, 
           언제든 문의 남겨주세요!</p>
+   
         <div class="row mb-5">
           <div class="col-md-3 Tab Gray_1">CN.AI Seoul</div>
-          <div class="col-12 col-auto offset-md-1 Body_1 lh-lg">서울 성동구 연무장5가길 7 현대테라스타워 507호<br>
-            <span class="Point_1">성수역 도보 5분 </span></div>
+          <div class="col-12 col-auto offset-md-1 Body_1 lh-lg">서울특별시 서초구 서리풀길 29-9<br>
+            <span class="Point_1">교대역 도보 13분 </span></div>
         </div>
         <div class="row my-5">
           <div class="col-md-3 Tab Gray_1">CN.AI Dajeon</div>
