--- a/views/index.html
+++ b/views/index.html
@@ -117,6 +117,22 @@ Class name automatically added to element */
     white-space: nowrap;
     /* background-color: tomato; */
   }
+
+  .swiper-pagination-bullet{
+
+    border-bottom: 2px solid white;
+    width: 4rem;
+    height: 0.2rem !important;
+    display: inline-block;
+    border-radius: 0%;
+  }
+
+  .swiper-pagination-bullet-active{
+    background: white;
+  }
+  .swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet{
+    margin:0
+  }
 </style>
 
 <!-- The video -->
@@ -159,31 +175,30 @@ Class name automatically added to element */
       </div>
     </section>
 
-    <section id="">
-      <div class="row" id=''>
-        <div class="text-center Gray_2 SubTitle_1 pb-5 mb-5" id='down'>Our Technology </div>
+    <section id="CN-HP01-3 our technology">
+      <div class="row" id="">
+        <div class="text-center Gray_2 SubTitle_1 pb-5 mb-5" id="down">Our Technology </div>
       </div>
 
-      <div class='row'>
-        <div class="mb-4 card w-100 border-0 rounded-0 p-0" id="">
+      <div class="row mb-3">
+        <div class="card w-100 border-0 rounded-0 p-0" id="">
           <img src="img/home/-2.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
             더하는 AI Human">
 
-          <div class=" mb-4 card-img-overlay  c1-img" id='tech'>
+          <div class="card-img-overlay c1-img bg-blur" id="tech">
             <div class="container c1-img d-flex flex-column h-100 p-4">
-              <div class='row g-0 h-100'>
-                <div class='col d-flex flex-column '>
-                  <p class=" c1-title Title_1_eng mb-0 gray_0">Data Warehouse</p>
+              <div class="row g-0 h-100">
+                <div class="col d-flex flex-column ">
+                  <p class="c1-title Title_1_eng mb-0 gray_0 text-white">Data Warehouse</p>
                   <!-- <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a> -->
-                  <div class='mt-auto '>
-                    <p class="Title_3 c1 transition hidden">CN.AI Data Warehouse 플랫폼은 자동화 된 ML 개발환경과 더불어 합성데이터를 제공하고,
+                  <div class="mt-auto ">
+                    <p class="Body_1 c1 transition visible" style="display: block !important;">CN.AI Data Warehouse 플랫폼은 자동화 된 ML 개발환경과 더불어 합성데이터를 제공하고,
                       On-premise와 SaaS를 동시에 지원하는 개방적이고 유연한 확장을 지원합니다.</p>
                   </div>
                 </div>
-                <div class='col align-self-end'>
-                  <button onClick="showUp($(this).attr('id'),'home')" id='c1'
-                    class="align-items-baseline border-0 Title_3 bg-transparent float-end c-btn c1-btn">
-                    <img class='btn-sm-1' src='img/icon/00 more-dark.png'>
+                <div class="col align-self-end">
+                  <button onclick="showUp($(this).attr('id'),'home')" id="c1" class="align-items-baseline border-0 bg-transparent float-end c-btn c1-btn c-btn-active">
+                    <img class="btn-sm-1" src="img/icon/00 more-dark.png">
                   </button>
                 </div>
               </div>
@@ -191,27 +206,26 @@ Class name automatically added to element */
           </div>
         </div>
       </div>
-      <div class="row gy-3">
+      <div class="row">
         <div class="col-md-6 col-12 ps-0 pe-md-3 pe-0">
 
-          <div class="mb-4 card w-100 border-0 rounded-0 p-0" id="">
-            <img src="img/home/-1.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
+          <div class="mb-4 card w-100 border-0 rounded-0 p-0 h-100" id="">
+            <img src="img/home/-1.png" class="card-img rounded-0 h-100" alt="비즈니스에 가능성을 
               더하는 AI Human">
 
-            <div class=" card-img-overlay  c2-img" id="" style="height: 100%">
+            <div class="card-img-overlay c2-img rounded-0 bg-blur" id="" style="height: 100%">
               <div class="container c2-img d-flex flex-column h-100 p-4">
                 <div class="row g-0 h-100">
-                  <div class="col-md-6 col-12 d-flex flex-column ">
-                    <p class=" c2-title Title_1_eng mb-0 gray_0">Future AI를 위한 데이터 합성 솔루션</p>
+                  <div class="col-md-10 col-12 d-flex flex-column ">
+                    <p class="c2-title Title_1_eng mb-0 gray_0 text-white">Future AI를 위한 데이터 합성 솔루션</p>
                     <a href="/coretech#box2" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
                     <div class="mt-auto ">
-                      <p class="Title_3 c2 transition hidden">empowers super-realistic, biologically-meaningful
+                      <p class="Body_1 c2 transition visible" style="display: block !important;">empowers super-realistic, biologically-meaningful
                         synthetic data. 데이터 공급이 어려웠던 다양한 분야에 AI를 위한 고품질의 데이터를 무한 공급합니다. </p>
                     </div>
                   </div>
                   <div class="col align-self-end">
-                    <button onclick="showUp($(this).attr('id'),'home')" id="c2"
-                      class="align-items-baseline border-0 Title_3 bg-transparent float-end c-btn c2-btn">
+                    <button onclick="showUp($(this).attr('id'),'home')" id="c2" class="align-items-baseline border-0 bg-transparent float-end c-btn c2-btn c-btn-active">
                       <img class="btn-sm-1" src="img/icon/00 more-dark.png">
                     </button>
                   </div>
@@ -222,25 +236,31 @@ Class name automatically added to element */
           </div>
 
         </div>
-        <div class="col-md-6 col-12 pb-0">
-          <div class="row">
-            <div class="mb-4 card w-100 border-0 rounded-0 p-0" id="">
+        <div class="col-md-6 col-12 pb-0" style="
+    flex: 1;
+    flex-direction: column;
+    display: flex;
+">
+          <div class="row" style="
+    /* flex-direction: column; */
+    flex: 1;
+">
+            <div class="mb-3 card w-100 border-0 rounded-0 p-0" id="">
               <img src="img/home/0.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
               더하는 AI Human">
               <div class="card-img-overlay container c3-img d-flex flex-column h-100 p-5 rounded-0">
                 <div class="row g-0 h-100">
-                  <div class="col-md-7 d-flex flex-column ">
-                    <p class=" c3-title Title_1_eng mb-0 gray_0">비즈니스에 가능성을
+                  <div class="col-md-10 d-flex flex-column ">
+                    <p class="c3-title Title_1_eng mb-0 gray_0">비즈니스에 가능성을
                       더하는 AI Human</p>
                     <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
                     <div class="mt-auto ">
-                      <p class="Title_3 c3 transition hidden" style='font-size: large;'>고도화된 음성 합성 TTS,영상 생성 LipSync,
+                      <p class="Body_1 c3 transition hidden" style="font-size: large;">고도화된 음성 합성 TTS,영상 생성 LipSync,
                         얼굴합성Faceswap으로 실제 인간과 구분할 수 없는 수준의 가상인간을 만듭니다. 가상인간 생성툴 STUDIO를 통해 언택트 시대의 소통을 혁신합니다.</p>
                     </div>
                   </div>
                   <div class="col align-self-end">
-                    <button onclick="showUp($(this).attr('id'),'home')" id="c3"
-                      class="align-items-baseline border-0 Title_3 bg-transparent float-end c-btn c3-btn">
+                    <button onclick="showUp($(this).attr('id'),'home')" id="c3" class="align-items-baseline border-0 bg-transparent float-end c-btn c3-btn">
                       <img class="btn-sm-1" src="img/icon/00 more-dark.png">
                     </button>
                   </div>
@@ -248,9 +268,11 @@ Class name automatically added to element */
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="pb-4" id=""
-              style="background: linear-gradient(108.12deg, #7E53FF 14.18%, rgba(126, 83, 255, 0) 43.27%), #5A54F5; ">
+          <div class="row" style="
+    /* flex-direction: column; */
+    flex: 1;
+">
+            <div class="" id="" style="background: linear-gradient(108.12deg, #7E53FF 14.18%, rgba(126, 83, 255, 0) 43.27%), #5A54F5;">
               <div class="container d-flex flex-column h-100 p-4">
                 <div class="row g-0 h-100">
                   <div class="col-7 d-flex align-items-center">
@@ -258,10 +280,10 @@ Class name automatically added to element */
                       신청해보세요!</p>
 
                   </div>
-                  <div class="col align-self-end">
-                    <button class="align-items-baseline border-0 Title_3 bg-transparent float-end mb-3">
+                  <div class="col my-auto">
+                    <a href="mailto:contact@cnai.ai" class="align-items-baseline border-0 Title_3 bg-transparent float-end">
                       <img class="btn-sm-1" src="img/icon/02 arrow-right-circle-dark.png">
-                    </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -312,12 +334,12 @@ Class name automatically added to element */
           </div>
         </div>
       </div>
-
       {% endfor %}
+    </div>
+  <div class = "" style="bottom:7vh; z-index:2">
+    <div class="swiper-pagination"></div>
 
-    </div>
-    <div class="swiper-pagination position-absolute start-50 translate-middle-x Label Gray_1" style="bottom:7vh;">
-    </div>
+  </div>
   </div>
 
 
@@ -373,7 +395,7 @@ Class name automatically added to element */
 
     </div>
     <!-- data-isotope-options='{ "layoutMode": "masonryHorizontal", "itemSelector": ".element-item", "masonryHorizontal": { "rowHeight": ".grid-sizer" } }' -->
-    <div class='wrapper'>
+    <div class='wrapper' id = 'wrapper'>
       <section class='isotope'>
         <!-- <div class="grid-sizer"></div> -->
         {% for i in data %}
@@ -399,10 +421,12 @@ Class name automatically added to element */
 
         </a>
         {% endif %}
-
         {% endfor %}
       </section>
+ 
     </div>
+    <button id="slideLeft" type="button">Slide left</button>
+    <button id="slideRight" type="button">Slide right</button>
   </section>
 </div>
 
@@ -419,6 +443,16 @@ Class name automatically added to element */
 <script src="//npmcdn.com/isotope-masonry-horizontal@2/masonry-horizontal.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Shuffle/6.0.0/shuffle.min.js"></script>
 <script>
+    const buttonRight = document.getElementById('slideRight');
+    const buttonLeft = document.getElementById('slideLeft');
+
+    buttonRight.onclick = function () {
+      document.getElementById('wrapper').scrollLeft += 1000;
+    };
+    buttonLeft.onclick = function () {
+      document.getElementById('wrapper').scrollLeft -= 1000;
+    };
+
   // init Isotope
 
   var $container = $('.isotope').isotope({
@@ -503,8 +537,15 @@ Class name automatically added to element */
   var swiper = new Swiper(".mySwiper", {
     pagination: {
       el: ".swiper-pagination",
-      type: "fraction",
+    
+      clickable: true,
+
     },
+    effect: 'fade',
+  fadeEffect: {
+    crossFade: true
+  },
+
     navigation: {
       nextEl: ".swiper-button-next",
       prevEl: ".swiper-button-prev",
