--- a/views/community.html
+++ b/views/community.html
@@ -39,8 +39,8 @@
   <img src="/img/4/1.png">
   <div class="card-img-overlay">
 <section class="py-5 text-center container-fluid mb-5 text-light h-auto">
-  <div class = 'CN.AI의 소식을 알려드립니다.' style="margin-top: 40vh;" data-aos="fade-up">
-  {{ title }}
+  <div class = 'Title_1' style="margin-top: 40vh;" data-aos="fade-up">
+    CN.AI의 소식을 알려드립니다.
   </div>
 </section>
 </div>
