--- a/views/company.html
+++ b/views/company.html
@@ -189,8 +189,7 @@ line-height: 150%;
     <div class="row row-cols-2 g-4">
       {% for s in data %}
      {% if s.category == 'companyLeader' %}
-      <div class="card px-3 border-0 col" style="
-      height: ">
+      <div class="card px-3 border-0 col" >
         <div class="row g-0 h-100 justify-content-between Gray_5_bg">
           <div class="col-md-6 d-flex flex-column">
             <div class="card-body p-4">
