--- a/views/base.html
+++ b/views/base.html
@@ -342,11 +342,13 @@
       line-height: 165%;
       
       
-      letter-spacing: -0.02em;">
+      letter-spacing: -0.02em;" id = 'enFooter'>
+  
         씨앤에이아이 <br />
         사업자등록번호 : 231-81-10834｜대표 : 이원섭 <br />
         서울특별시 서초구 서리풀길 29-9｜대전광역시 중구 중앙로 101 대전창업허브 4F <br />
         © 2022. CNAI Inc. all rights reserved.
+
       </div>
     </div>
   </footer>
@@ -360,7 +362,7 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.8/dist/semantic.min.js"></script>
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
   <script type="text/javascript" src="/src/simplyScroll/jquery.simplyscroll.js"></script>
 
 
