--- a/views/index.html
+++ b/views/index.html
@@ -152,7 +152,11 @@ Class name automatically added to element */
       <div class="container h-100 justify-content-center text-center align-items-center d-flex" >
         <div  data-aos="fade-up">
           <!-- position-absolute 쓰면 fade up 불가 -->
-          <h1 class="Title_1 text-white">당신이 원하는 모든 것, AI로 이루어 드립니다</h1>
+          <h1 class="Title_1 text-white">
+            {% block x1 %}            
+            당신이 원하는 모든 것, AI로 이루어 드립니다
+            {% endblock %}
+          </h1>
   
         </div>
       </div>
@@ -169,7 +173,7 @@ Class name automatically added to element */
       <div class="row py-md-5 mt-5">
         <div class="mx-auto">
           <p class="better" data-aos="fade-up">BETTER DATA, FUTURE FOR AI</p> <br />
-          <p class="lead text-muted" data-aos="fade-up" style='margin-bottom: 8vw;'>데이터가 주도하는 인공지능의 미래</p>
+          <p class="lead text-muted" data-aos="fade-up" style='margin-bottom: 8vw;'>  {% block x2 %}    데이터가 주도하는 인공지능의 미래 {% endblock%} </p>
           <button id='goDown' class='border-0 bg-transparent'><i class="angle down icon"></i></button>
         </div>
       </div>
