--- a/views/en/home.html
+++ b/views/en/home.html
@@ -6,3 +6,17 @@ Make Your Dream Come True to Everything You Want, AI.
 {% block x2 %}
 The Future of Data-Driven AI
 {% endblock %}
+
+{% block x2 %}
+The Future of Data-Driven AI
+{% endblock %}
+
+{% block x2 %}
+The Future of Data-Driven AI
+{% endblock %}
+
+{% block x2 %}
+The Future of Data-Driven AI
+{% endblock %}
+
+
