--- a/views/index.html
+++ b/views/index.html
@@ -148,7 +148,7 @@ Class name automatically added to element */
     <video autoplay muted loop id="myVideo">
       <source src="img/home/1.mov" type="video/mp4">
     </video>
-    <div class="card-img-overlay " style = 'height:90vh;'>
+    <div class="card-img-overlay " >
       <div class="container h-100 justify-content-center text-center align-items-center d-flex" >
         <div  data-aos="fade-up">
           <!-- position-absolute 쓰면 fade up 불가 -->
@@ -192,7 +192,7 @@ Class name automatically added to element */
           <div class="card-img-overlay c1-img bg-blur" id="tech">
             <div class="container c1-img d-flex flex-column h-100 p-4">
               <div class="row g-0 h-100">
-                <div class="col d-flex flex-column ">
+                <div class="col-md col-12 d-flex flex-column ">
                   <p class="c1-title Title_1_eng mb-0 gray_0 text-white">Data Warehouse</p>
                   <!-- <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a> -->
                   <div class="mt-auto ">
@@ -379,7 +379,7 @@ Class name automatically added to element */
 
 
 <div class='isBg-1 card rounded-0 border-0 d-none'>
-  <video autoplay muted loop id="myVideo">
+  <video autoplay muted loop id="myVideo2">
     <source src="img/home/2.mp4" type="video/mp4">
   </video>
 </div>
@@ -429,8 +429,8 @@ Class name automatically added to element */
       </section>
  
     </div>
-    <button id="slideLeft" type="button">Slide left</button>
-    <button id="slideRight" type="button">Slide right</button>
+    <button id="slideLeft" type="button" class = 'bg-transparent border-0'><img src = '/img/icon/04 arrow-left-circle.png' class = 'btn-sm-1'></button>
+    <button id="slideRight" type="button" class = 'bg-transparent border-0'><img src = '/img/icon/05 arrow-right-circle.png' class = 'btn-sm-1'></button>
   </section>
 </div>
 
