--- a/views/community.html
+++ b/views/community.html
@@ -63,12 +63,12 @@
 
 
       <div id="filters" class="button-group mb-5">
-        <button class="btn-blue-tab is-checked bg-transparent border-0 mx-3 px-3 is-checked px-3"
+        <button class="btn-blue-tab is-checked bg-transparent border-0 mx-md-3 mx-0 px-md-3 is-checked px-3"
           data-filter="*">All</button>
-        <button class="btn-blue-tab bg-transparent border-0 mx-3 px-3" data-filter=".Investment">Investment</button>
-        <button class="btn-blue-tab bg-transparent border-0 mx-3 px-3" data-filter=".AI">AI</button>
-        <button class="btn-blue-tab bg-transparent border-0 mx-3 px-3" data-filter=".medical">Medical</button>
-        <button class="btn-blue-tab bg-transparent border-0 mx-3 px-3" data-filter=".syntheticData">Synthetic
+        <button class="btn-blue-tab bg-transparent border-0 mx-md-3 mx-0 px-md-3" data-filter=".Investment">Investment</button>
+        <button class="btn-blue-tab bg-transparent border-0 mx-md-3 mx-0 px-md-3" data-filter=".AI">AI</button>
+        <button class="btn-blue-tab bg-transparent border-0 mx-md-3 mx-0 px-md-3" data-filter=".medical">Medical</button>
+        <button class="btn-blue-tab bg-transparent border-0 mx-md-3 mx-0 px-md-3" data-filter=".syntheticData">Synthetic
           Data</button>
       </div>
 
