--- a/views/en/home.html
+++ b/views/en/home.html
@@ -7,16 +7,25 @@ Make Your Dream Come True to Everything You Want, AI.
 The Future of Data-Driven AI
 {% endblock %}
 
-{% block x2 %}
-The Future of Data-Driven AI
+{% block x3 %}
+In Detail
 {% endblock %}
 
-{% block x2 %}
-The Future of Data-Driven AI
+{% block xx3 %}
+In Detail
 {% endblock %}
 
-{% block x2 %}
-The Future of Data-Driven AI
+{% block x4 %}
+Synthetic Data Solutions for Future AI
 {% endblock %}
 
+{% block x5 %}
+AI Human Adds Potential to Your Business
+{% endblock %}
+
+
+{% block x6 %}Apply for the beta service of AI Human!{% endblock %}
+{% block x7 %}The Changes that Data Synthesis Solutions{% endblock %}
+{% block x8 %}Partner with the growth of CN.AI{% endblock %}
+{% block x9 %}Let’s check CNAI’s NEWS!{% endblock %}
 
