--- a/views/index.html
+++ b/views/index.html
@@ -221,8 +221,8 @@ Class name automatically added to element */
               <div class="container c2-img d-flex flex-column h-100 p-4">
                 <div class="row g-0 h-100">
                   <div class="col-md-10 col-12 d-flex flex-column ">
-                    <p class="c2-title Title_1_eng mb-0 gray_0 text-white">Future AI를 위한 데이터 합성 솔루션</p>
-                    <a href="/coretech#box2" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
+                    <p class="c2-title Title_1_eng mb-0 gray_0 text-white">{% block x4 %}Future AI를 위한 데이터 합성 솔루션{% endblock %}</p>
+                    <a href="/coretech#box2" class="Body_1 Gray_1 text-mute">{% block x3 %}더 알아보기{% endblock %} <i class="angle right icon"></i></a>
                     <div class="mt-auto ">
                       <p class="Body_1 c2 transition visible" style="display: block !important;">empowers super-realistic, biologically-meaningful
                         synthetic data. 데이터 공급이 어려웠던 다양한 분야에 AI를 위한 고품질의 데이터를 무한 공급합니다. </p>
@@ -255,9 +255,10 @@ Class name automatically added to element */
               <div class="card-img-overlay container c3-img d-flex flex-column h-100 p-5 rounded-0">
                 <div class="row g-0 h-100">
                   <div class="col-md-10 d-flex flex-column ">
-                    <p class="c3-title Title_1_eng mb-0 gray_0">비즈니스에 가능성을
-                      더하는 AI Human</p>
-                    <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
+                    <p class="c3-title Title_1_eng mb-0 gray_0">
+                      {% block x5 %}비즈니스에 가능성을
+                      더하는 AI Human{% endblock %}</p>
+                    <a href="/coretech" class="Body_1 Gray_1 text-mute">{% block xx3 %}더 알아보기 {% endblock %}<i class="angle right icon"></i></a>
                     <div class="mt-auto ">
                       <p class="Body_1 c3 transition hidden" style="font-size: large;">고도화된 음성 합성 TTS,영상 생성 LipSync,
                         얼굴합성Faceswap으로 실제 인간과 구분할 수 없는 수준의 가상인간을 만듭니다. 가상인간 생성툴 STUDIO를 통해 언택트 시대의 소통을 혁신합니다.</p>
@@ -280,8 +281,9 @@ Class name automatically added to element */
               <div class="container d-flex flex-column h-100 p-4">
                 <div class="row g-0 h-100">
                   <div class="col-7 d-flex align-items-center">
-                    <p class=" Title_3 mb-0 text-white">AI Human의 베타 서비스를
-                      신청해보세요!</p>
+                    <p class=" Title_3 mb-0 text-white">{% block x6 %}
+                      AI Human의 베타 서비스를
+                      신청해보세요!{% endblock %}</p>
 
                   </div>
                   <div class="col my-auto">
@@ -303,7 +305,7 @@ Class name automatically added to element */
         Our Use Cases
       </div>
       <p class=' Title_2 my-4 pb-4 Gray_1'>
-        데이터 합성 솔루션이 가져올 변화
+        {% block x7 %}  데이터 합성 솔루션이 가져올 변화{% endblock %}
       </p>
   </div>
 
@@ -312,29 +314,18 @@ Class name automatically added to element */
   <div class="swiper mySwiper" style="
         height: 70vh;
     ">
-    <div class="swiper-wrapper">
-
-      {% set say1 = [{ title: "Medical 의료 분야.", title2: "일반적으로 구하기 어려운 희귀 병변 데이터를 생성하고 정밀하게 탐지합니다.",
-      description: "개인 민감정보 활용 이슈에서 자유로운 의료 합성데이터를 만듭니다.
-      합성데이터는 학습 데이터의 부족 문제를 해결해 AI 진단의 정확도를 높입니다." },
-      { title: "AI Human 가상 인간.", title2: "AI Human을 통해 가치를 전달하고, 언택트 시대의 소통을 혁신합니다.",
-      description: "고도화된 영상/음성 합성기술로 실제 인간과
-      구분할 수 없는 수준의 가상인간을 만듭니다." } ,
-      {title: "Automotive 자율주행", title2: "보다 현실에 가까운 학습데이터로
-      자율주행의 안전성을 높입니다. ", description: "도로/주차 운전 시, 일상에서 수집하기 어려운
-      여러 상황을 학습데이터로 만듭니다."}]
-      %}
-      {% for item in say1 %}
+    <div class="swiper-wrapper">      
+      {% for i in range(1,4) %}
       <div class="swiper-slide ">
         <div class="row gx-0 justify-content-between"
           style="background: linear-gradient(96.66deg, rgba(255, 255, 255, 0) -8.55%, rgba(255, 255, 255, 0.8) 159.35%), #5A54F5;">
           <div class="col-md-3 col-12 Gray_5 offset-md-2" >
-            <p class="Body_1  mt-5 ">{{ item.title }}</p>
-            <p class="Title_2 ">{{ item.title2 }} </p>
-            <p class="Body_1 ">{{ item.description }}</p>
+            <p class="Body_1  mt-5 ">{{ say1[i]['title']  }}</p>
+            <p class="Title_2 ">{{ say1[i]['title2']  }} </p>
+            <p class="Body_1 ">{{ say1[i]['description'] }}</p>
           </div>
           <div class="col-md-5 col-12 mt-3 mt-md-0">
-            <img src="/img/home/{{ loop.index }}.png" class="img-fluid w-100" alt="...">
+            <img src="/img/home/{{ say1[i]['id'] }}.png" class="img-fluid w-100" alt="{{ say1[i]['title'] }}">
           </div>
         </div>
       </div>
@@ -342,7 +333,6 @@ Class name automatically added to element */
     </div>
   <div class = "" style="bottom:7vh; z-index:2">
     <div class="swiper-pagination"></div>
-
   </div>
   </div>
 
@@ -352,7 +342,7 @@ Class name automatically added to element */
 
     <div class='container col-12'>
       <h5 class='Gray_2 SubTitle_1'>Our Partners </h5>
-      <h3 class='Gray_1 Title_1'>CN.AI의 성장과 함께하는 파트너사</h3>
+      <h3 class='Gray_1 Title_1'>{% block x8 %}CN.AI의 성장과 함께하는 파트너사{% endblock %}</h3>
     </div>
 
     <div class="simply-scroll simply-scroll-container" style="margin-top: 16vh">
@@ -387,7 +377,7 @@ Class name automatically added to element */
 <div class='isBg bg-Gray6' style="padding-top: 30vh">
   <section id='news' class='offset-md-2 '>
     <p class='Title_1 Gray_1' style="margin-top: 36vh; margin-bottom: 8vh;">
-      CN.AI의 새로운 소식을 확인하세요!
+      {% block x9 %} CN.AI의 새로운 소식을 확인하세요! {% endblock %}
     </p>
 
     <div id="filters" class="button-group mb-5">
@@ -434,8 +424,9 @@ Class name automatically added to element */
   </section>
 </div>
 
+
 {% import 'partials/footerBanner.nj' as box2 %}
-{{ box2.footerBanner(src = 'mailto:contact@cnai.ai', title = 'CN.AI의 솔루션에 대한 상담이 필요하다면', btn = 'CONTACT US') }}
+{{ box2.footerBanner(src = 'mailto:contact@cnai.ai', title = fB, btn = 'CONTACT US') }}
 
 
 {% endblock %}
